updated user and admin model
