# Documentation/api.yaml
@@ -266,284 +266,284 @@ paths:
 
   # paths:
   # /category/{_id}:
-  #   get:
-  #     tags:
-  #       - Category
-  #     summary: Detail info of a single Category.
-  #     description: Return a list of a category's detail info.
-  #     parameters:
-  #       - name: _id
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #           example: "6438a5eb2118772c696bccd3"
-  #     responses:
-  #       "200":
-  #         description: OK!
+    # get:
+    #   tags:
+    #     - Category
+    #   summary: Detail info of a single Category.
+    #   description: Return a list of a category's detail info.
+    #   parameters:
+    #     - name: _id
+    #       in: path
+    #       required: true
+    #       schema:
+    #         type: string
+    #         example: "6438a5eb2118772c696bccd3"
+    #   responses:
+    #     "200":
+    #       description: OK!
 
-  #   patch:
-  #     tags:
-  #       - Category
-  #     summary: Edit category details.
-  #     description: |
-  #       <strong>Only admins can access this!<br /><hr /></strong>
-  #       Request:<br /><br />
-  #       name (string)<br />
-  #       image (string)
-  #       route (required, string)<br />
-  #       about (string)
-  #     parameters:
-  #       - in: path
-  #         name: _id
-  #         required: true
-  #         description: The ID of the category to edit.
-  #         schema:
-  #           type: string
-  #           example: "6438a5eb2118772c696bccd3"
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               name:
-  #                 type: string
-  #                 example: "Programming & Tech"
-  #               image:
-  #                 type: string
-  #                 example: "https://i.pinimg.com/originals/e4/26/70/e426702edf874b181aced1e2fa5c6cde.gif"
-  #               route:
-  #                 type: string
-  #                 example: "/programming"
-  #               about:
-  #                 type: string
-  #                 example: "about the programming section/ category"
+    # patch:
+    #   tags:
+    #     - Category
+    #   summary: Edit category details.
+    #   description: |
+    #     <strong>Only admins can access this!<br /><hr /></strong>
+    #     Request:<br /><br />
+    #     name (string)<br />
+    #     image (string)
+    #     route (required, string)<br />
+    #     about (string)
+    #   parameters:
+    #     - in: path
+    #       name: _id
+    #       required: true
+    #       description: The ID of the category to edit.
+    #       schema:
+    #         type: string
+    #         example: "6438a5eb2118772c696bccd3"
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             name:
+    #               type: string
+    #               example: "Programming & Tech"
+    #             image:
+    #               type: string
+    #               example: "https://i.pinimg.com/originals/e4/26/70/e426702edf874b181aced1e2fa5c6cde.gif"
+    #             route:
+    #               type: string
+    #               example: "/programming"
+    #             about:
+    #               type: string
+    #               example: "about the programming section/ category"
 
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: The web server is working correctly!
-  #       "404":
-  #         description: Category not found!
-  #       "422":
-  #         description: Invalid Category data!
-  #       "401":
-  #         description: Unauthorized!
+    #   security:
+    #     - bearerAuth: []
+    #   responses:
+    #     "200":
+    #       description: The web server is working correctly!
+    #     "404":
+    #       description: Category not found!
+    #     "422":
+    #       description: Invalid Category data!
+    #     "401":
+    #       description: Unauthorized!
 
-  #   delete:
-  #     tags:
-  #       - Category
-  #     summary: Delete Category.
-  #     description: |
-  #       <strong>Only admins can access this!<br /><hr /></strong>
-  #     parameters:
-  #       - in: path
-  #         name: _id
-  #         required: true
-  #         description: The ID of the Category to delete.
-  #         schema:
-  #           type: string
-  #           example: "643f22cd880dfeab0d4efae9"
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: The web server is working correctly!
-  #       "404":
-  #         description: Category not found!
-  #       "401":
-  #         description: Unauthorized!
+    # delete:
+    #   tags:
+    #     - Category
+    #   summary: Delete Category.
+    #   description: |
+    #     <strong>Only admins can access this!<br /><hr /></strong>
+    #   parameters:
+    #     - in: path
+    #       name: _id
+    #       required: true
+    #       description: The ID of the Category to delete.
+    #       schema:
+    #         type: string
+    #         example: "643f22cd880dfeab0d4efae9"
+    #   security:
+    #     - bearerAuth: []
+    #   responses:
+    #     "200":
+    #       description: The web server is working correctly!
+    #     "404":
+    #       description: Category not found!
+    #     "401":
+    #       description: Unauthorized!
 
-  # paths:
-  # /admin:
-  #   post:
-  #     tags:
-  #       - Admin
-  #     summary: Register admin or (if exists) login a admin.
-  #     description: |
-  #       <ul>The requested id should be registered as an user</ul>
-  #       Request:<br /><br />
-  #       _id (required, string)<br />
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               id:
-  #                 type: string
-  #                 example: "643ba76fbcc93dcd0016a44c"
-  #               adminmakerpass:
-  #                 type: string
-  #                 example: ""
-  #               adminmaker:
-  #                 type: string
-  #                 example: "643378688002fac4f0138cbe"
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: The web server is working correctly!
-  #       "201":
-  #         description: Admin create success!
-  #       "422":
-  #         description: Admin already exists!
-  #       "400":
-  #         description: Invalid Admin data or credential!
-  #       "401":
-  #         description: Unauthorized!
-  # paths:
-  # /admin/all:
-  #   get:
-  #     tags:
-  #       - Admin
-  #     summary: Get Detail info of all admins.
-  #     description: |
-  #       <strong>Only admins can access this!<br /><hr /></strong>
+  paths:
+  /admin:
+    post:
+      tags:
+        - Admin
+      summary: Register admin or (if exists) login a admin.
+      description: |
+        <ul>The requested id should be registered as an user</ul>
+        Request:<br /><br />
+        _id (required, string)<br />
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: "643ba76fbcc93dcd0016a44c"
+                adminmakerpass:
+                  type: string
+                  example: ""
+                adminmaker:
+                  type: string
+                  example: "643378688002fac4f0138cbe"
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: The web server is working correctly!
+        "201":
+          description: Admin create success!
+        "422":
+          description: Admin already exists!
+        "400":
+          description: Invalid Admin data or credential!
+        "401":
+          description: Unauthorized!
+  paths:
+  /admin/all:
+    get:
+      tags:
+        - Admin
+      summary: Get Detail info of all admins.
+      description: |
+        <strong>Only admins can access this!<br /><hr /></strong>
 
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: OK!
-  #       "401":
-  #         description: Unauthorized!
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: OK!
+        "401":
+          description: Unauthorized!
 
-  # paths:
-  # /admin/{_id}:
-  #   get:
-  #     tags:
-  #       - Admin
-  #     summary: Detail info of a single Admin.
-  #     description: <strong>Only a admin can access this for his own info!<br /><hr /></strong> <br />Return a list of a Admin's detail info.
-  #     parameters:
-  #       - name: _id
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #           example: "643378688002fac4f0138cbe"
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: OK!
-  #       "401":
-  #         description: Unauthorized!
+  paths:
+  /admin/{_id}:
+    get:
+      tags:
+        - Admin
+      summary: Detail info of a single Admin.
+      description: <strong>Only a admin can access this for his own info!<br /><hr /></strong> <br />Return a list of a Admin's detail info.
+      parameters:
+        - name: _id
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "643378688002fac4f0138cbe"
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: OK!
+        "401":
+          description: Unauthorized!
 
-  #   patch:
-  #     tags:
-  #       - Admin
-  #     summary: Edit admin password.
-  #     description: |
-  #       <strong>Only a admin can access this for his own pass change!<br /><hr /></strong>
-  #       Request:<br /><br />
-  #       currentPassword (required, string)<br />
-  #       newPassword (required, string)<br />
-  #     parameters:
-  #       - in: path
-  #         name: _id
-  #         required: true
-  #         description: The ID of the admin to edit.
-  #         schema:
-  #           type: string
-  #           example: "643378688002fac4f0138cbe"
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               currentPassword:
-  #                 type: string
-  #                 example: ""
-  #               newPassword:
-  #                 type: string
-  #                 example: ""
+    patch:
+      tags:
+        - Admin
+      summary: Edit admin password.
+      description: |
+        <strong>Only a admin can access this for his own pass change!<br /><hr /></strong>
+        Request:<br /><br />
+        currentPassword (required, string)<br />
+        newPassword (required, string)<br />
+      parameters:
+        - in: path
+          name: _id
+          required: true
+          description: The ID of the admin to edit.
+          schema:
+            type: string
+            example: "643378688002fac4f0138cbe"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                currentPassword:
+                  type: string
+                  example: ""
+                newPassword:
+                  type: string
+                  example: ""
 
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: The web server is working correctly!
-  #       "404":
-  #         description: Admin not found!
-  #       "422":
-  #         description: Invalid Admin data!
-  #       "401":
-  #         description: Unauthorized!
-  #       "400":
-  #         description: Invalid Credential!
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: The web server is working correctly!
+        "404":
+          description: Admin not found!
+        "422":
+          description: Invalid Admin data!
+        "401":
+          description: Unauthorized!
+        "400":
+          description: Invalid Credential!
 
-  #   delete:
-  #     tags:
-  #       - Admin
-  #     summary: Delete Admin.
-  #     parameters:
-  #       - in: path
-  #         name: _id
-  #         required: true
-  #         description: The ID of the Admin to delete.
-  #         schema:
-  #           type: string
-  #           example: "643dd81016971d6822d3cae3"
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               adminterminator:
-  #                 type: string
-  #                 example: ""
-  #               adminterminatorpass:
-  #                 type: string
-  #                 example: ""
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: The web server is working correctly!
-  #       "404":
-  #         description: Admin not found!
-  #       "401":
-  #         description: Unauthorized!
-  #       "400":
-  #         description: Invalid Credential!
+    delete:
+      tags:
+        - Admin
+      summary: Delete Admin.
+      parameters:
+        - in: path
+          name: _id
+          required: true
+          description: The ID of the Admin to delete.
+          schema:
+            type: string
+            example: "643dd81016971d6822d3cae3"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                adminterminator:
+                  type: string
+                  example: ""
+                adminterminatorpass:
+                  type: string
+                  example: ""
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: The web server is working correctly!
+        "404":
+          description: Admin not found!
+        "401":
+          description: Unauthorized!
+        "400":
+          description: Invalid Credential!
 
-  # paths:
-  # /admin/user/{_id}:
+  paths:
+  /admin/user/{_id}:
 
-  #   delete:
-  #     tags:
-  #       - Admin
-  #     summary: Delete User.
-  #     parameters:
-  #       - in: path
-  #         name: _id
-  #         required: true
-  #         description: The ID of the User to delete.
-  #         schema:
-  #           type: string
-  #           example: "643dd81016971d6822d3cae3"
+    delete:
+      tags:
+        - Admin
+      summary: Delete User.
+      parameters:
+        - in: path
+          name: _id
+          required: true
+          description: The ID of the User to delete.
+          schema:
+            type: string
+            example: "643dd81016971d6822d3cae3"
 
-  #     security:
-  #       - bearerAuth: []
-  #     responses:
-  #       "200":
-  #         description: The web server is working correctly!
-  #       "404":
-  #         description: User not found!
-  #       "401":
-  #         description: Unauthorized or The user is an admin! Remove from admin first.
-  #       "400":
-  #         description: Invalid Credential!
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: The web server is working correctly!
+        "404":
+          description: User not found!
+        "401":
+          description: Unauthorized or The user is an admin! Remove from admin first.
+        "400":
+          description: Invalid Credential!
 
 # bearer token auth added
 components:
